# Djinnite

./: .gitignore  AGENTS.md  DEVELOPMENT.md  OLLAMA_PROVIDER_DESIGN.md  README.md  TOOL_SUPPORT.md  USE.md  __init__.py  config_loader.py  llm_logger.py  pricing_class.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
ai_providers/: __init__.py  base_provider.py  claude_provider.py  gemini_provider.py  openai_provider.py
config/: ai_config.example.json  disabled_models.json  known_model_defaults.json  model_catalog.json  model_catalog.old.json
prompts/: __init__.py
scripts/: __init__.py  audit_pricing.py  clean_disabled_reasons.py  disable_models.py  migrate_capabilities_to_lists.py  update_model_costs.py  update_models.py  validate_ai.py  validate_json.py  validate_models.py
tests/: __init__.py  probe_anthropic_beta.py  test_costing.py  test_pricing_class.py  test_schema_normalization.py  test_web_search.py
