[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "djinnite"
version = "0.4.0"
description = "Lightweight AI abstraction layer for multiple providers (Gemini, Claude, OpenAI)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Brian Bulkowski"},
]
keywords = ["ai", "llm", "gemini", "claude", "openai", "abstraction"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "google-genai>=1.0.0",
    "anthropic>=0.8.0",
    "openai>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.package-dir]
# Map package names to directories relative to pyproject.toml.
# Since pyproject.toml IS inside the djinnite package, "." = this directory.
"djinnite" = "."
"djinnite.ai_providers" = "ai_providers"
"djinnite.prompts" = "prompts"
"djinnite.scripts" = "scripts"
"djinnite.tests" = "tests"
"djinnite.config" = "config"

[tool.setuptools]
packages = [
    "djinnite",
    "djinnite.ai_providers",
    "djinnite.prompts",
    "djinnite.scripts",
    "djinnite.tests",
    "djinnite.config",
]

[tool.setuptools.package-data]
"djinnite.config" = ["*.json"]
